<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.materialdesignquiz.MainActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro"
            android:textColor="#00bcd4"
            android:textSize="24sp"
            android:paddingTop="40dp"
            android:layout_marginBottom="28dp"/>
        <ImageView
            android:layout_width="350dp"
            android:layout_height="180dp"
            android:src="@drawable/materialdesign_introduction"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_quiz"
            android:textColor="#000"
            android:textSize="24sp"
            android:lineSpacingExtra="10dp"
            android:paddingTop="34dp"
            android:layout_marginBottom="20dp"/>
        <View
            style="@style/Line"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q1"
            android:textColor="#00bcd4"
            android:textSize="24sp"
            android:paddingTop="40dp"
            android:layout_marginBottom="28dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q1question"
            android:textColor="#000"
            android:textSize="16sp"
            android:lineSpacingExtra="10dp"
            android:paddingTop="40dp"
            android:layout_marginBottom="20dp"/>
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/metaphor_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Q1answer1"
                    android:textSize="15sp"
                    android:paddingLeft="20dp"
                    android:textAppearance="?android:textAppearanceMedium" />
                <RadioButton
                    android:id="@+id/material_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Q1answer2"
                    android:textSize="15sp"
                    android:paddingLeft="20dp"
                    android:textAppearance="?android:textAppearanceMedium" />
                <RadioButton
                    android:id="@+id/meaning_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Q1answer3"
                    android:textSize="15sp"
                    android:paddingLeft="20dp"
                    android:textAppearance="?android:textAppearanceMedium" />
                <RadioButton
                    android:id="@+id/no_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Q1answer4"
                    android:textSize="15sp"
                    android:paddingLeft="20dp"
                    android:textAppearance="?android:textAppearanceMedium" />
            </RadioGroup>
        <View
            style="@style/Line"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q2"
            android:textColor="#00897B"
            android:textSize="24sp"
            android:paddingTop="40dp"
            android:layout_marginBottom="28dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q2question"
            android:textColor="#000"
            android:textSize="16sp"
            android:lineSpacingExtra="10dp"
            android:paddingTop="40dp"
            android:layout_marginBottom="20dp"/>
        <EditText
            android:id="@+id/hex_color_anwser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="#"
            android:inputType="textCapCharacters"
            android:maxLength="6"/>
        <View
            style="@style/Line"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q3"
            android:textColor="#00897B"
            android:textSize="24sp"
            android:paddingTop="40dp"
            android:layout_marginBottom="28dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q3question"
            android:textColor="#000"
            android:textSize="16sp"
            android:lineSpacingExtra="10dp"
            android:paddingTop="40dp"
            android:layout_marginBottom="20dp"/>
        <EditText
            android:id="@+id/most_used_color_anwser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Q3answer"
            android:inputType="textCapCharacters" />
        <View
            style="@style/Line"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q4"
            android:textColor="#00897B"
            android:textSize="24sp"
            android:paddingTop="40dp"
            android:layout_marginBottom="28dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q4question"
            android:textColor="#000"
            android:textSize="16sp"
            android:lineSpacingExtra="10dp"
            android:paddingTop="40dp"
            android:layout_marginBottom="20dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginLeft="40dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/style_color_uiapplication_accent3"/>
            <CheckBox
                android:id="@+id/accent_color_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="40dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/style_color_uiapplication_accent4"/>
            <CheckBox
                android:id="@+id/accent_color_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="40dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/style_color_uiapplication_accent5"/>
            <CheckBox
                android:id="@+id/accent_color_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="40dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/style_color_uiapplication_accent6"/>
            <CheckBox
                android:id="@+id/accent_color_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="40dp"
                />
        </LinearLayout>
        <View
            style="@style/Line"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q5"
            android:textColor="#00897B"
            android:textSize="24sp"
            android:paddingTop="40dp"
            android:layout_marginBottom="28dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q5question"
            android:textColor="#000"
            android:textSize="16sp"
            android:lineSpacingExtra="10dp"
            android:paddingTop="40dp"
            android:layout_marginBottom="20dp"/>
        <RadioGroup
            android:id="@+id/font_size_radiogroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="40dp">
            <RadioButton
                android:id="@+id/twentysp_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q5answer1"
                android:textAppearance="?android:textAppearanceMedium" />
            <RadioButton
                android:id="@+id/twentytwosp_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q5answer2"
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_marginLeft="10dp"/>
            <RadioButton
                android:id="@+id/twentypx_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q5answer3"
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_marginLeft="10dp"/>
            <RadioButton
                android:id="@+id/twentytwopx_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q5answer4"
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_marginLeft="10dp"/>
        </RadioGroup>
        <View
            style="@style/Line"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q6"
            android:textColor="#00897B"
            android:textSize="24sp"
            android:paddingTop="40dp"
            android:layout_marginBottom="28dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q6question"
            android:textColor="#000"
            android:textSize="16sp"
            android:lineSpacingExtra="10dp"
            android:paddingTop="40dp"
            android:layout_marginBottom="20dp"/>
        <EditText
            android:id="@+id/typeface_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Q6answer"
            android:inputType="textCapCharacters"/>
        <View
            style="@style/Line"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q7"
            android:textColor="#AD1457"
            android:textSize="24sp"
            android:paddingTop="40dp"
            android:layout_marginBottom="28dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q7question"
            android:textColor="#000"
            android:textSize="16sp"
            android:lineSpacingExtra="10dp"
            android:paddingTop="40dp"
            android:layout_marginBottom="20dp"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="30dp">
            <RadioButton
                android:id="@+id/density_pixels_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q7answer1"
                android:paddingLeft="20dp"
                android:textAppearance="?android:textAppearanceMedium" />
            <RadioButton
                android:id="@+id/density_independent_pixels_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q7answer2"
                android:paddingLeft="20dp"
                android:textAppearance="?android:textAppearanceMedium" />
            <RadioButton
                android:id="@+id/scalable_pixels_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q7answer3"
                android:paddingLeft="20dp"
                android:textAppearance="?android:textAppearanceMedium" />
        </RadioGroup>
        <View
            style="@style/Line"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q8"
            android:textColor="#AD1457"
            android:textSize="24sp"
            android:paddingTop="40dp"
            android:layout_marginBottom="28dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q8question"
            android:textColor="#000"
            android:textSize="16sp"
            android:lineSpacingExtra="10dp"
            android:paddingTop="40dp"
            android:layout_marginBottom="20dp"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="40dp">
            <RadioButton
                android:id="@+id/sixteen_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q8answer1"
                android:textAppearance="?android:textAppearanceMedium" />
            <RadioButton
                android:id="@+id/twentytwo_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q8answer2"
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_marginLeft="10dp"/>
            <RadioButton
                android:id="@+id/eighteen_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q8answer3"
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_marginLeft="10dp"/>
            <RadioButton
                android:id="@+id/fourteen_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q8answer4"
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_marginLeft="10dp"/>
        </RadioGroup>
        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Submit"
            android:layout_marginTop="40dp"
            android:background="#00BCD4"
            android:textColor="@android:color/white"
            android:onClick="submit"
            android:layout_gravity="center"/>

    </LinearLayout>

</ScrollView>
